--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
+
+  <!-- Scrollreveal
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<script src="https://cdn.jsdelivr.net/scrollreveal.js/3.1.4/scrollreveal.min.js"></script>
+
 <body>
 
   <!-- Primary Page Layout
