--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
   <!-- Scrollreveal
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<script src="https://cdn.jsdelivr.net/scrollreveal.js/3.1.4/scrollreveal.min.js"></script>
-
+<script src="js/scrollreveal.min.js"></script>
+<script src="js/scripts.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 <body>
 
   <!-- Primary Page Layout
