--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
+  <!-- Scripts
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="js/scrollreveal.min.js"></script>
+  <script src="js/scripts.js" type="text/javascript"></script>
+
 </head>
 
-  <!-- Scrollreveal
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<script src="js/scrollreveal.min.js"></script>
-<script src="js/scripts.js" type="text/javascript"></script>
-<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 <body>
 
   <!-- Primary Page Layout
