--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/styles.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -38,13 +39,34 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+  <div class="hero">
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns float-r nav">
+          <h4>
+            <a href="" class="white">WORK</a> &nbsp; &nbsp;
+            <a href="" class="white">ABOUT</a>
+          </h4>
+        </div>
       </div>
+      <div class="row">
+        <div class="twelve columns hero-content">
+          <h1><img src="images/hero-logo-melon.png"></h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="twelve columns center hero-text">
+          <h2>Digital Designer</h2>
+          <h6>and devotee of the melon</h6>
+        </div>
+      </div>
+      <div class="row">
+        <div class="five columns offset-by-seven em-melon">
+          <img src="images/em-pic-melon.png" />
+        </div>
+      </div> 
     </div>
+       
   </div>
 
 <!-- End Document
