--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="stylesheets/normalize.css">
+  <link rel="stylesheet" href="stylesheets/skeleton.css">
+  <link rel="stylesheet" href="stylesheets/screen.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -30,8 +30,8 @@
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-  <script src="js/scrollreveal.min.js"></script>
-  <script src="js/scripts.js" type="text/javascript"></script>
+  <script src="javascripts/scrollreveal.min.js"></script>
+  <script src="javascripts/scripts.js" type="text/javascript"></script>
 
 </head>
 
